feat(MacrosCard): 💄 add background color to MacrosCard components

--- a/Front/src/styles/MacrosCard.css
+++ b/Front/src/styles/MacrosCard.css
@@ -6,6 +6,7 @@
     width: 258px;
     padding: 32px;
     border-radius: 5px;
+    background-color: var(--color-gray-lightest);
 }
 
 .MacrosCard h3 {
