--- a/Front/src/styles/Profile.css
+++ b/Front/src/styles/Profile.css
@@ -1,27 +1,59 @@
-.container-vertical {
-    display: flex;
-    flex-direction: column;
-}
-
-.container-horizontal {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.macros {
-    justify-content: space-between;
+.main-profile{
+    container-type: inline-size;
+    container-name: profile;
+    display: grid;
+    place-items: center;
 }
 
 .Profile {
-    padding-left: 1rem;
+    padding: 1rem;
+    display: grid;
+    max-width: 1200px;
+    place-items: center;
 }
 
-.Profile-charts {
-    padding-top: 70px;
-    gap: 30px;
+
+.graphics-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 35px;
+    max-width: 1170px;
 }
 
-.Profile-square-charts {
+.activity-container {
+    width: 835px;
+    height: 320px;
+}
+
+.square-charts-container {
     padding-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    gap: 20px;
+}
+
+.macros-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    place-items: center;
+    gap: 40px;
+    max-width: 300px;
+}
+
+@container profile (width < 1200px){
+    .graphics-container {
+        grid-template-columns: 1fr;
+        place-items: center;
+    }
+
+    .macros-container{
+        grid-template-columns: repeat(4, max-content);
+        grid-template-rows: 1fr;
+        gap: 18px;
+        justify-content: space-between;
+        justify-items: center;
+        max-width: 835px;
+    }
 }
